data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_545.wast
;; 6. **Test Description**: Define a loop with a `valtype?` `blocktype` which has a `br_if` targeting the loop end with a constant condition that never allows exit, resulting in an infinite loop.    **Constraint Checked**: Proper type validation of `blocktype` and correct `br_if` handling.    **Relation to Infinite Loops**: Checks if improperly handled types and constant condition can cause infinite loops.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (i32.const 0)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)